src/css/navbar.css
body {
  margin: 0px;
  padding: 0px;
  background-color: #14213d;
}

a {
  text-decoration: none;
  font-size: 36px;
  color: white;
}
.navbar {
  width: fit-content;
  position: relative;
  left: 0;
  top: 35%;
}
.navbar-elements {
  position: fixed;
  height: 100%;
}
#trigger {
  width: 50px;
  height: 50px;
  position: absolute;
  margin-left: 155px;
  top: 38%;
  font-size: 50px;
  font-weight: bold;
  background-color: white;
  border: 1px solid white;
  border-radius: 4px;
}
i {
  color: #14213d;
}

.navbar div {
  /* position: relative; */
  text-align: center;
  width: 150px;
  border: 1px solid white;
  background-color: #14213d;
  box-shadow: inset 0 0 0 0 white;
  transition: ease-out 0.3s;
  margin-bottom: 10px;
  border-radius: 5px;
}

.navbar div:hover {
  box-shadow: inset 150px 0 0 0 white;
}
#link:hover {
  color: #14213d;
}
.ticboard {
  margin: 0 auto;
}
.ticrow {
  display: flex;
  justify-content: center;
  align-items: center;
}
.ticrow div {
  text-align: center;
}

